# opennote

./: AGENTS.md  CONTEXT.md  README.md  components.json  package.json  skills-lock.json
docs/agents/: domain.md  issue-tracker.md
src-tauri/: Cargo.toml  Info.plist  OpenNote.entitlements  build.rs  tauri.conf.json
src-tauri/capabilities/: migrated.json
src-tauri/icons/: icon.icns
src-tauri/src/: db.rs  main.rs  recordings.rs
src-tauri/src/recordings/: write.rs
src-tauri/src/transcription/: audio.rs  import_audio.rs  macos_permissions_bridge.m  mod.rs  models.rs  moonshine.rs  parakeet.rs  pipeline.rs  whisper.rs  worker.rs
src-tauri/src/transcription/pipeline/: chunking.rs  cleanup.rs  model.rs  recording_write.rs  repository.rs  workers.rs
src/app/: global.css  provider.tsx
src/app/routes/: home.tsx
src/components/ui/: alert-dialog.tsx  badge.tsx  button.tsx  calendar.tsx  card.tsx  combobox.tsx  dialog.tsx  empty.tsx  input.tsx  pagination.tsx  select.tsx  sheet.tsx  sidebar.tsx  spinner.tsx  textarea.tsx
src/features/built-with/: index.tsx
src/features/errors/: error-base.tsx
src/features/github-star-button/: index.tsx
src/features/recording/: types.ts
src/features/recording/api/: capture-session.ts
src/features/recording/components/: active-recording-dialog.tsx  waveform-view.tsx
src/features/recording/hooks/: use-active-recording.ts
src/features/transcription/: types.ts
src/lib/: app-preferences.ts  recent-recordings.ts  utils.ts
src/stores/: use-recordings-store.ts
src/types/: recording.ts
tests/: recording-search.test.ts
(+5 files in other folders)
