[package]
name = "opennote-rs"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.3", features = [] }
cc = "1"

[dependencies]
tauri = { version = "2.10.3", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-shell = "2"
tauri-plugin-process = "2.3.1"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
sqlx = { version = "0.8", features = ["sqlite"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
time = { version = "0.3.47", features = ["formatting"] }
reqwest = { version = "0.12", features = ["stream"] }
futures-util = "0.3"
tokio = { version = "1", features = ["fs"] }
cpal = "0.15"
hound = "3.5"
log = "0.4"
transcribe-rs = { version = "0.3.11", features = ["whisper-metal"] }
whisper-rs = { version = "=0.16.0", features = ["coreml"] }
sha2 = "0.10"
zip = "2"
uuid = { version = "1", features = ["v4"] }

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
